@@ -3,8 +3,6 @@ SET(WTF_HEADERS
     AVLTree.h
     Alignment.h
     AlwaysInline.h
-    ArrayBuffer.cpp
-    ArrayBufferView.cpp
     Assertions.h
     Atomics.h
     BitVector.h
@@ -46,7 +44,6 @@ SET(WTF_HEADERS
     MallocZoneSupport.h
     MathExtras.h
     MessageQueue.h
-    MetaAllocator.cpp
     MetaAllocator.h
     MetaAllocatorHandle.h
     NonCopyingSort.h
@@ -135,6 +132,8 @@ SET(WTF_HEADERS
 )
 
 SET(WTF_SOURCES
+    ArrayBuffer.cpp
+    ArrayBufferView.cpp
     Assertions.cpp
     BitVector.cpp
     ByteArray.cpp
@@ -146,8 +145,9 @@ SET(WTF_SOURCES
     DynamicAnnotations.cpp
     FastMalloc.cpp
     HashTable.cpp
-    MainThread.cpp
     MD5.cpp
+    MainThread.cpp
+    MetaAllocator.cpp
     OSRandomSource.cpp
     NumberOfCores.cpp
     PageAllocationAligned.cpp
